Clean CSS and fix alignment of code

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -192,33 +192,61 @@ hr {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
 
-.index-row {
-    margin-top: 1.0rem;
-    margin-bottom: 1.0rem;
-    margin-left: 1.0rem;
-    margin-right: 1.0rem;
-    padding-top: 1.0rem;
-    padding-bottom: 1.0rem;
-}
-.index-column {
-    background-color: $gray-lighter;
-    margin-left: 1.0rem;
-    margin-right: 1.0rem;
-    text-align: center;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    .index-row {
+        margin-top: 1.0rem;
+        margin-bottom: 1.0rem;
+        margin-left: 1.0rem;
+        margin-right: 1.0rem;
+        padding-top: 1.0rem;
+        padding-bottom: 1.0rem;
+
+        .index-image {
+            width: 100%;
+            min-width: 200px;
+            max-width: 400px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .index-small-image {
+            padding-top: 1.5rem;
+            padding-bottom: 1.5rem;
+            max-width: 200px;
+            max-height: 150px;
+        }
+
+        .index-column {
+            background-color: $gray-lighter;
+            margin-left: 1.0rem;
+            margin-right: 1.0rem;
+            text-align: center;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+        }
+
+        .btn {
+            display: inline-block;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            padding: 1.0rem 6.5rem;
+            margin-top: 5.0rem;
+            margin-bottom: 0.075rem;
+            background-color: $brand-masthead;
+            color: $white;
+            font-weight: bold;
+            font-size: larger;
+            transition-duration: 0.4s;
+        }
+        .btn:hover {
+            background-color: $brand-masthead-text-hover;
+            color: $brand-masthead;
+        }
+    }
 }
 
-.index-image2 {
-    padding-top: 1.5rem;
-    border-radius: 30%;
-}
-
-.index-image {
-    padding-top: 1.5rem;
-}
-
-}
 /* Card overrides */
 
 div.card-deck {
@@ -277,23 +305,16 @@ card-img-top {
     font-weight: 600;
 }
 
-/* 
-   Button overrides; 
-   more space between buttons on multiple consecutive lines 
+/*
+   Button overrides;
+   more space between buttons on multiple consecutive lines
    overall line-height is unchanged.
 */
 
 .btn {
-    display:inline-block;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 1.0rem 6.5rem;
-    background-color: $brand-primary;
-    color: #ffffff;
-    margin-top: 5.0rem;
-    margin-bottom: 0.075rem;
-    transition-duration: 0.4s;
+    margin-top: 0.075rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
 }
 .btn:hover {
     background-color: #ffc107;
